--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "php": "^8.1",
     "cboden/ratchet": "^0.4.4",
     "guzzlehttp/guzzle": "^7.2",
+    "jinoantony/laravel-kanban": "^1.0",
     "laravel/framework": "^10.23",
     "laravel/sanctum": "^3.3",
     "laravel/tinker": "^2.8",
