--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     "laravel/sanctum": "^3.3",
     "laravel/tinker": "^2.8",
     "laravelcollective/html": "^6.4",
+    "stripe/stripe-php": "^15.0",
     "twilio/sdk": "^7.12",
     "yajra/laravel-datatables-oracle": "^10.11"
   },
