--- a/package.json
+++ b/package.json
@@ -136,7 +136,7 @@
         "leaflet": "1.9.4",
         "mapbox-gl": "2.15.0",
         "masonry-layout": "4.2.2",
-        "moment": "2.29.4",
+        "moment": "^2.30.1",
         "node-waves": "0.7.6",
         "nouislider": "15.7.1",
         "numeral": "2.0.6",
