--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "laravel/tinker": "^2.8",
     "laravelcollective/html": "^6.4",
     "munafio/chatify": "^1.6",
+    "rafaelwendel/phpsupabase": "^0.0.7",
     "stripe/stripe-php": "^15.0",
     "twilio/sdk": "^7.12",
     "yajra/laravel-datatables-oracle": "^10.11"
